sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:3: error: not found: value afterBlue
  while (afterBlue <= beforeWhite) {
         ^DutchFlagAlgo:3: error: not found: value beforeWhite
  while (afterBlue <= beforeWhite) {
                      ^DutchFlagAlgo:4: error: not found: value afterBlue
      getCouleur(afterBlue) match {
                 ^DutchFlagAlgo:6: error: not found: value afterBlue
        afterBlue += 1
        ^DutchFlagAlgo:8: error: not found: value afterBlue
        swap(afterBlue, beforeWhite)
             ^DutchFlagAlgo:8: error: not found: value beforeWhite
        swap(afterBlue, beforeWhite)
                        ^DutchFlagAlgo:9: error: not found: value beforeWhite
        beforeWhite -= 1
        ^DutchFlagAlgo:11: error: not found: value afterBlue
        swap(afterBlue, beforeWhite)
             ^DutchFlagAlgo:11: error: not found: value beforeWhite
        swap(afterBlue, beforeWhite)
                        ^DutchFlagAlgo:12: error: not found: value beforeRed
        swap(beforeRed, beforeWhite)
             ^DutchFlagAlgo:12: error: not found: value beforeWhite
        swap(beforeRed, beforeWhite)
                        ^DutchFlagAlgo:13: error: not found: value beforeWhite
        beforeWhite -= 1
        ^DutchFlagAlgo:14: error: not found: value beforeRed
        beforeRed -= 1
        ^