sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
	while (afterBlue <= beforeWhite) {
			getCouleur(afterBlue) match {
			case BLUE =>
				afterBlue += 1
			case WHITE =>
				swap(afterBlue, beforeWhite)
				beforeWhite -= 1
			case RED =>
				swap(afterBlue, beforeWhite)
				swap(beforeRed, beforeWhite)
				beforeWhite -= 1
				beforeRed -= 1
			}
		}
	}